# Lumo_FlyWheel

./: .gitignore  CNB-55-authoring-spec.md  CNB55_FAMILY_CHECKLIST.md  Makefile  README.md  benchmark_deisgn.md  model_registry.yaml  pyproject.toml
.codex/: config.toml
.githooks/: pre-commit
benchmark_blueprints/families/proposal-ranking-manager-judgment/workspace_bundle/v3-dirty-state/repo_evidence/code/in_progress_patch/: Cargo.toml  notes.md
docker/: Dockerfile.codex-long-grader  Dockerfile.nvidia-vllm
docs/: HLD-Family-Test-Requirements-v0_1.md  HLD-Serving-Backend-AutoResearch-v0_1-HardeningPlan.md  HLD-Serving-Backend-AutoResearch-v0_1.md  (+14 more)
scenario_families/report-cli-markdown-evolution/variants/incident-triage/repo/: .scenario_variant  AGENTS.md  pyproject.toml
scenario_families/report-cli-markdown-evolution/variants/incident-triage/repo/docs/: triage-policy.md  usage.md
scenario_families/report-cli-markdown-evolution/variants/incident-triage/repo/report_app/: __init__.py  cli.py  fixtures.py  formatting.py  models.py  rendering.py  service.py  summaries.py
scenario_families/report-cli-markdown-evolution/variants/incident-triage/repo/tests/: test_cli.py  test_docs.py  test_service.py
scenario_families/report-cli-markdown-evolution/variants/inventory-ops/repo/: .scenario_variant  AGENTS.md  README.md  pyproject.toml
scenario_families/report-cli-markdown-evolution/variants/inventory-ops/repo/docs/: handoff.md  operations.md  usage.md
scenario_families/report-cli-markdown-evolution/variants/inventory-ops/repo/report_app/: __init__.py  cli.py  fixtures.py  formatting.py  markdown.py  models.py  rendering.py  service.py  summaries.py
scenario_families/report-cli-markdown-evolution/variants/inventory-ops/repo/tests/: test_cli.py  test_docs.py  test_markdown_helpers.py  test_service.py
scenario_families/report-cli-markdown-evolution/variants/release-readiness/repo/: .scenario_variant  AGENTS.md  Makefile  README.md  mypy.ini  pyproject.toml  ruff.toml
scenario_families/report-cli-markdown-evolution/variants/release-readiness/repo/docs/: architecture.md  renderers.md  usage.md
scenario_families/report-cli-markdown-evolution/variants/release-readiness/repo/report_app/: service.py
scenario_families/report-cli-markdown-evolution/variants/release-readiness/repo/src/release_readiness/: __init__.py  __main__.py  cli.py  config.py
scenario_families/report-cli-markdown-evolution/variants/release-readiness/repo/src/release_readiness/adapters/: env_source.py  fs_source.py
scenario_families/report-cli-markdown-evolution/variants/release-readiness/repo/src/release_readiness/core/: aggregation.py  formatting.py  model.py
scenario_families/report-cli-markdown-evolution/variants/release-readiness/repo/src/release_readiness/renderers/: base.py  json_renderer.py  registry.py
scenario_families/report-cli-markdown-evolution/variants/release-readiness/repo/tests/: conftest.py  test_aggregation.py  test_cli.py  test_cli_json.py  test_config.py  test_docs.py  test_formatting.py  test_fs_source.py  test_registry.py  test_service.py
(+4976 files in other folders)
