[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "inventory-ops-report"
version = "0.2.0"
description = "Inventory operations queue handoff report"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.3.0"]

[tool.setuptools]
packages = ["report_app"]
