[package]
name = "respproxy-rs"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# TODO: add jsonschema-compat crate; current stable does not support draft-07
# schemas with skill-pack-specific $ref resolution. Diego.
